Fix so it works on lab machines